--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "next": "13.0.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "redis": "^4.5.0",
         "redis-om": "^0.3.6",
         "typescript": "4.8.4"
     }
